Fix background on iOS intento 12

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,7 +134,6 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
 
 .main-m {
     background-color: #444C5C;
-    /*background-image: url("../imgs/bg.jpg");*/
     color: #FFFFFF;
     float: none;
     margin-top: -134px;
@@ -145,12 +144,13 @@ box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
 }
 
 .ten-imagen-fondo {
-    background: url(../imgs/bg.jpg) no-repeat center center fixed; 
+    background: url(../imgs/bg.jpg) no-repeat center center fixed;
+    background-color: #444C5C;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../imgs/bg.jpg', sizingMethod='scale');
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../imgs/bg.gif', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../imgs/bg.jpg', sizingMethod='scale')";
 }
 
